--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="container">
+    <br>
+
+    <div class="row">
+        <br>
+
+        <h1 class="centered" style="text-align: center">WE DO COOL STUFF</h1>
+        <hr>
+        <br>
+        <br>
+    </div>
+    <!-- /row -->
+    <div class="container">
+        <div class="row" style="text-align: center">
+            <%= render 'home/recharge_wallet' %>
+        </div>
+    </div>
+    <!-- /row -->
+</div><!-- /container -->
+<br>
+<hr>
+<br>
+<br>
+
+
