--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WalletManager</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+    <title>WalletManager</title>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
 </head>
 <body>
-<% if current_user %>
-    Welcome: <%= current_user.email %>
-    <%= link_to "Logout", logout_url %>
-<% else %>
-    <%= link_to "Register", new_user_path %>
-	<%= link_to "Login", login_url %>
-<% end %>
+<%= render 'home/header' %>
 
-<%= yield %>
-
+<div class="container" style="margin-top: 30px;">
+    <%= render 'common/flash_message' %>
+    <%= yield %>
+</div>
+<%#= render 'home/footer' %>
 </body>
 </html>
