--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+    <div class="field">
+        <%= f.label :mobile %><br>
+        <%= f.number_field :mobile %>
+    </div>
   <div class="field">
     <%= f.label :password %><br>
     <%= f.password_field :password %>
