--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,8 +1,11 @@
-body { background-color: #fff; color: #333; }
+body {
+    background-color: #fff;
+    color: #333;
+}
 
 body, p, ol, ul, td {
     font-family: verdana, arial, helvetica, sans-serif;
-    font-size:   13px;
+    font-size: 13px;
     line-height: 18px;
 }
 
@@ -12,9 +15,18 @@ pre {
     font-size: 11px;
 }
 
-a { color: #000; }
-a:visited { color: #666; }
-a:hover { color: #fff; background-color:#000; }
+a {
+    color: #000;
+}
+
+a:visited {
+    color: #666;
+}
+
+a:hover {
+    color: #fff;
+    background-color: #000;
+}
 
 div.field, div.actions {
     margin-bottom: 10px;
@@ -55,6 +67,16 @@ div.field, div.actions {
     list-style: square;
 }
 
-.alert{
+.alert {
     margin-top: 30px;
 }
+
+.panel-title {
+    display: inline;
+    font-weight: bold;
+}
+
+.checkbox.pull-right {
+    margin: 0;
+}
+
