--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,7 +19,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <% if current_user %>
-                    <li><a href="#">Balance:<b> <%= current_user.account.balance %></b> RS</a></li>
+                    <li><a href="#">Balance: <b><i class="fa fa-inr"></i> <%= current_user.account.balance %></b></a></li>
                     <li><a href="#">Welcome: <%= current_user.email %></a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account
