--- a/app/views/home/_recharge_wallet.html.erb
+++ b/app/views/home/_recharge_wallet.html.erb
@@ -2,7 +2,7 @@
 
     <%= f.hidden_field :transaction_type, :value => "credit" %>
     <div class="input-group input-group-lg" style="max-width:360px;">
-        <%= f.number_field :amount, :class => "form-control", :placeholder => "Amount" %>
+        <%= f.text_field :amount, :class => "form-control", :placeholder => "Amount" %>
     </div>
     <%= f.submit("Add Money To Wallet", :class => "btn btn-primary btn-lg") %>
 <% end %>
